plugins {
    id 'java'
    id 'org.springframework.boot' version '4.1.0'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'com.diffplug.spotless' version "8.9.0"
    id 'jacoco'
}

group = 'com.tragepro.api'
version = '0.0.1-SNAPSHOT'
description = 'tragepro-api'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

ext {
    jwtVersion = "0.13.0"
    springAiVersion="1.0.0-RC1"
    openApi = "3.0.3"
    mapStruct = "1.6.3"
    springModulithVersion = "2.1.0"
    swaggerUiVersion = "5.32.6"
    copperVersion = "8.0.0"
    lombokMapstruct = "0.2.0"
    temporalVersion = "1.37.0"
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-batch'
    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
    implementation 'org.springframework.boot:spring-boot-starter-mongodb'
    implementation 'org.springframework.boot:spring-boot-starter-restclient'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-webmvc'
    implementation 'org.springframework.boot:spring-boot-starter-websocket'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.modulith:spring-modulith-starter-core'
    implementation 'org.springframework.modulith:spring-modulith-starter-mongodb'
    implementation "org.mapstruct:mapstruct:$mapStruct"
    implementation "org.springdoc:springdoc-openapi-starter-webmvc-ui:$openApi"
    implementation "io.jsonwebtoken:jjwt-api:$jwtVersion"
    implementation 'org.projectlombok:lombok'

    implementation "io.temporal:temporal-sdk:$temporalVersion"
    implementation "io.temporal:temporal-spring-boot-starter:$temporalVersion"

    implementation 'io.github.resilience4j:resilience4j-spring-boot3:2.2.0'

    runtimeOnly "io.jsonwebtoken:jjwt-impl:$jwtVersion"
    runtimeOnly "io.jsonwebtoken:jjwt-jackson:$jwtVersion"
    compileOnly 'org.projectlombok:lombok'

    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    developmentOnly 'org.springframework.boot:spring-boot-docker-compose'

    runtimeOnly 'org.springframework.modulith:spring-modulith-actuator'
    runtimeOnly 'org.springframework.modulith:spring-modulith-observability'

    annotationProcessor "org.mapstruct:mapstruct-processor:$mapStruct"
    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
    annotationProcessor 'org.projectlombok:lombok'
    annotationProcessor "org.projectlombok:lombok-mapstruct-binding:$lombokMapstruct"

    testImplementation 'org.springframework.boot:spring-boot-starter-actuator-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-batch-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-data-mongodb-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-mongodb-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-restclient-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-security-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
    testImplementation 'org.springframework.boot:spring-boot-testcontainers'
    testImplementation 'org.springframework.modulith:spring-modulith-starter-test'

    testImplementation 'org.wiremock:wiremock-standalone:3.12.1'
    testImplementation "io.temporal:temporal-testing:$temporalVersion"
    testImplementation 'org.testcontainers:testcontainers-junit-jupiter'
    testImplementation 'org.testcontainers:testcontainers-mongodb'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

dependencyManagement {
    imports {
        mavenBom "org.springframework.modulith:spring-modulith-bom:${springModulithVersion}"
    }
}

spotless {
    java {
        target 'src/*/java/**/*.java'
        importOrder()
        removeUnusedImports()
        leadingTabsToSpaces(4)
        trimTrailingWhitespace()
        googleJavaFormat('1.35.0')
    }
    format 'misc', {
        target '**/*.gradle', '**/*.md', '.gitignore'
        targetExclude 'build/**'
        leadingTabsToSpaces(4)
        trimTrailingWhitespace()
        endWithNewline()
    }
    format 'yaml', {
        target '**/*.yml', '**/*.yaml'
        targetExclude 'build/**'
        leadingTabsToSpaces(2)
        trimTrailingWhitespace()
        endWithNewline()
    }
    format 'properties', {
        target '**/*.properties'
        targetExclude 'build/**'
        leadingTabsToSpaces(2)
        trimTrailingWhitespace()
        endWithNewline()
    }
}

tasks.named('test') {
    useJUnitPlatform()
    jvmArgs '--sun-misc-unsafe-memory-access=allow'
    finalizedBy jacocoTestReport
}

bootRun {
    jvmArgs '--sun-misc-unsafe-memory-access=allow'
}

tasks.withType(JavaCompile).configureEach {
    options.annotationProcessorPath = configurations.annotationProcessor
}

    def jacocoExcludes = [
        '**/model/**',
        '**/config/**',
        '**/dto/**',
        '**/entity/**',
        '**/constant/**',
        '**/mapper/**',
        '**/common/**'
    ]

jacocoTestReport {
    dependsOn test, compileJava, processResources
    reports {
        xml.required = true
        html.required = true
        csv.required = false
        html.outputLocation = layout.buildDirectory.dir('jacoco/test/html')
    }
    afterEvaluate {
        classDirectories.setFrom(
                files(classDirectories.files.collect {
                    fileTree(dir: it, exclude: jacocoExcludes)
                })
        )
    }
}

tasks.named('jacocoTestCoverageVerification') {
    dependsOn jacocoTestReport
    violationRules {
        rule {
            element = 'BUNDLE'
            excludes = jacocoExcludes
            limit {
                counter = 'LINE'
                value = 'COVEREDRATIO'
                minimum = 0.95
            }
        }
    }
    classDirectories.setFrom(
            files(classDirectories.files.collect {
                fileTree(dir: it, exclude: jacocoExcludes)
            })
    )
}

tasks.check {
    dependsOn(tasks.named("jacocoTestCoverageVerification"))
}
